# fc3-admin-do-catalogo-python

./: .gitignore  .pdm-python  .pylintrc  Dockerfile  README.md  api.http  docker-compose.yaml  pyproject.toml  pytest.ini  test.py
.devcontainer/: devcontainer.json
doc/: .~CRONOGRAMA_FULL_CYCLE.xlsx  CRONOGRAMA_FULL_CYCLE.xlsx  commands.md
envs/: .env.e2e.example  .env.example
http/: api.http
src/__seedwork/domain/: value_objects.py
src/category/: entities.py
src/category/domain/: entities.py
src/category/tests/domain/: test_entities.py
src/category/tests/unit/domain/: test_unit_entities.py
src/core/__seedwork/application/: dto.py  use_cases.py
src/core/__seedwork/domain/: entities.py  exceptions.py  repositories.py  validators.py  value_objects.py
src/core/__seedwork/infra/django_app/: serializers.py
src/core/__seedwork/tests/integration/domain/: test_init_validators.py
src/core/__seedwork/tests/unit/application/: test_unit_dto.py  test_unit_use_cases.py
src/core/__seedwork/tests/unit/domain/: test_unit_entities.py  test_unit_repositories.py  test_unit_validators.py  test_unit_value_objects.py
src/core/category/application/: dto.py  use_cases.py
src/core/category/domain/: entities.py  repositories.py  validators.py
src/core/category/infra/django_app/: api.py  mappers.py  repositories.py  serializers.py  urls.py
src/core/category/infra/django_app/migrations/: 0001_initial.py
src/core/category/infra/in_memory/: repositories.py
src/core/category/tests/e2e/categories/: test_e2e_post.py
src/core/category/tests/integration/infra/django_app/: test_int_mappers.py
src/core/category/tests/unit/application/: test_unit_dto.py  test_unit_use_cases.py
src/core/category/tests/unit/domain/: test_unit_entities.py  test_unit_validators.py
src/core/category/tests/unit/infra/django_app/: test_unit_api.py
src/django_app/: config.py  container.py  settings.py  urls.py
src/django_app/settings/: __init__.py  __settings.py  testing.py
