[project]
name = "fc3-admin-do-catalogo-python"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Alex Candido", email = "alex.candido.tec@gmail.com"},
]

dependencies = [
  "django>=5.1.7",
  "djangorestframework>=3.15.2",
  "django-extensions>=3.2.3",
  "dependency-injector>=4.46.0",
  "pydantic>=1.10.7",
  "dj-database-url>=2.3.0",
  "python-dotenv>=1.0.1",
  "django-filter>=25.1",
  "markdown>=3.7",
  "pytest-django>=4.10.0",
  "colorama>=0.4.6",
  "psycopg2-binary>=2.9.10",
  "pydantic-settings>=2.8.1",
]

requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
packages = [{include = "src"}]
distribution = true

[tool.pdm.scripts]
format = "autopep8 --in-place --aggressive --aggressive -r ."
manage="python ./src/django_app/manage.py"
pep8 = "autopep8 --in-place --recursive ./src"
pylint = "pylint ./src"
runserver = "pdm run manage runserver 0.0.0.0:8000"
test = "pytest"
test_cov = "pdm run test --cov ./src --cov-fail-under 80"
test_cov_html = "pdm run test_cov --cov-report html:./__coverage"

[dependency-groups]
dev = [
    "autopep8>=2.3.2",
    "pylint>=3.3.4",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "dataclasses>=0.6",
    "model-bakery>=1.20.4",
    "faker>=37.0.2",
]

